--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>br.com.poli.biblioteca</groupId>
+    <groupId>br.com.poli.eventflow</groupId>
     <artifactId>EventFlowProject</artifactId>
     <version>1.0-SNAPSHOT</version>
 
@@ -28,7 +28,7 @@
                 <artifactId>exec-maven-plugin</artifactId>
                 <version>3.1.0</version>
                 <configuration>
-                    <mainClass>br.com.poli.biblioteca.Main</mainClass>
+                    <mainClass>br.com.poli.eventflow.Main</mainClass>
                 </configuration>
             </plugin>
         </plugins>
